[Add] Lockdown status for the wloe world by date range
