# backend/src/server.js
@@ -14,7 +14,6 @@ const app = express();
 app.use(cors())
 app.use(compression());
 
-app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const ttl = 60 * 60 * 1;
 const cacheService = new CacheService(ttl);
@@ -31,7 +30,18 @@ connect().then(database => {
         let date = new Date(req.params.date);
 
         cacheService.get(`status_world_${date}}`, () => {
-            return snapshotService.getWorldSnaphots(date);
+            return snapshotService.getWorldLockdownSnaphots(date);
+        }).then(result => {
+            res.json(result);
+        }).catch(next);
+    });
+
+    app.get('/status/world/:startDate/:endDate', function (req, res, next) {
+        let startDate = new Date(req.params.startDate);
+        let endDate = new Date(req.params.endDate);
+
+        cacheService.get(`status_world_${startDate}${endDate}}`, () => {
+            return snapshotService.getWorldLockdownSnaphotsByRange(startDate, endDate);
         }).then(result => {
             res.json(result);
         }).catch(next);
@@ -60,4 +70,5 @@ connect().then(database => {
         }).catch(next);
     });
 
+    app.use('/', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 });
